# aioagent

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: broadcast.py  fsm_negotiation.py  ping_pong.py  pipeline.py  request_reply.py
src/aioagent/: __init__.py  agent.py  behaviours.py  bus.py  exceptions.py  message.py  patterns.py  template.py
tests/: test_agent.py  test_behaviours.py  test_bus.py  test_exceptions.py  test_integration.py  test_message.py  test_patterns.py
